# iepub

./: .devcontainer.json  .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  README_EN.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: arg.rs  command.rs  main.rs
derive/: Cargo.toml
derive/src/: lib.rs
lib/: Cargo.toml  build.rs
lib/src/: common.rs  cover.rs  lib.rs  main.rs  parser.rs  path.rs
lib/src/adapter/: core.rs
lib/src/cli/: arg.rs  command.rs
lib/src/epub/: appender.rs  builder.rs  common.rs  core.rs  html.rs  mod.rs  reader.rs  v3.rs  writer.rs
lib/src/mobi/: builder.rs  common.rs  core.rs  image.rs  nav.rs  reader.rs  writer.rs
