[workspace]
members = [ "derive", "lib", "cli"] 
resolver = "2"

[workspace.package]
rust-version = "1.87.0"
version = "1.3.1"
edition = "2021"
license = "MIT"
description = "epub、mobi电子书读写"
repository = "https://github.com/inkroom/iepub"
readme = "./README.md"
keywords = ["epub","mobi","azw","ebook"]

[patch.crates-io]
iepub = { path = "lib" }
