[package]
name = "iepub"
version = { workspace=true }
edition = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
rust-version = { workspace = true }

[dependencies]
zip = "7.2.0"
anyhow = "1.0.100"
quick-xml = { version = "0.39.0" }
ab_glyph = { version = "0.2.32", optional = true }
imageproc = { version = "0.26.0", optional = true}
serde_json = { version = "1.0.149", optional = true }
iepub-derive = { path = "../derive", version = "1.3.1" }
serde = { version = "1.0.228", features = ["derive"], optional = true }
image = { version = "0.25.9", default-features = false, features = ["jpeg"], optional = true }
md-5 = {version = "0.10.6", optional = true }

[dev-dependencies]
reqwest = { version = "0.13.1", features = ["blocking"] }

[features]
no_nav=[]
cache=["dep:serde","dep:serde_json"]
cover = ["dep:ab_glyph","dep:image","dep:imageproc"]