[package]
name = "iepub"
version = { workspace=true }
edition = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
rust-version = { workspace = true }

[dependencies]
zip = "7.2.0"
quick-xml = { version = "0.39.0" }
serde_json = { version = "1.0.149", optional = true }
iepub-derive = { path = "../derive", version = "1.3.4" }
serde = { version = "1.0.228", features = ["derive"], optional = true }
ab_glyph = { version = "0.2.23", optional = true }
imageproc = { version = "0.26.1", optional = true}
image = { version = "0.25.10", default-features = false, features = ["jpeg"], optional = true }

[dev-dependencies]
reqwest = { version = "0.13.1", features = ["blocking"] }

[features]
no_nav=[]
cache=["dep:serde","dep:serde_json"]
cover = ["dep:ab_glyph","dep:image","dep:imageproc"]
